--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "node_modules\typescript\bin\tsc -p"
   },
   "keywords": [],
   "author": "Jeremy Foster <jeremy.foster@live.com> (http://codefoster.com)",
