chore: updated App password

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Bot Framework Variables
 MICROSOFT_APP_ID=c8bec413-0027-49cb-8d79-9a1433169f15
-MICROSOFT_APP_PASSWORD=byuXPQ_]@btuqHCFP10784{
+MICROSOFT_APP_PASSWORD=xtaavgSNLP7~dKDW3351^_-
 
 # Application Insights Key
 APPINSIGHTS_INSTRUMENTATION_KEY=f4fd3d96-21ca-4e34-b6f2-2207208a7d47
