--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "typings install && tsc"
+    "postinstall": "node_modules\\typescript\\bin\\tsc -p"
   },
   "keywords": [],
   "author": "Jeremy Foster <jeremy.foster@live.com> (http://codefoster.com)",
