--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,19 +6,14 @@
     "configurations": [
         {
             "type": "node",
-            "request": "attach",
-            "name": "Attach",
-            "port": 9229
-        },
-        {
-            "type": "node",
             "request": "launch",
-            "name": "Launch Program",
-            "program": "${workspaceFolder}\\app.js",
+            "name": "Debug bot",
+            "preLaunchTask": "deploy",
+            "program": "${workspaceFolder}\\..\\artifacts\\wwwroot\\app.js",
             "outFiles": [
-                "${workspaceFolder}/**/*.js"
+                "${workspaceFolder}/../artifacts/wwwroot/**"
             ],
             "console": "integratedTerminal"
         }
-    ]
+    ],
 }
